# TASS-protocol

./: .gitignore  LICENSE  README.md  __init__.py  parser.py  pyproject.toml  sample.tass  tass.js
book/: README.md  build_pdf.py
book/chapters/: 01-economics.md  02-tokenizers.md  03-format.md  04-schema-compilation.md  05-parsing.md  06-file-format.md  07-benchmarking.md  08-crypto.md  09-system-design.md  10-case-studies.md  11-beyond-llm.md  appendix-a-api.md  appendix-b-glossary.md  appendix-c-use-cases.md
book/snippets/: cost_model.py  end_to_end_pipeline.py  fallback_ladder.py  payload_budgets.py  schema_registry.py  signed_audit_trail.py  tass_logger.py
docs/: CRYPTO.md
examples/: iot_sensor.tass  quantum_telemetry.tass  ticket_routing.tass  weather.tass  weather_raw.json
tass/: __init__.py  benchmark.py  cli.py  crypto.py  file_parser.py  parser.py
tests/: test_cli.py  test_crypto.py  test_file_parser.py  test_parser.py
webapp/: index.html  soundlink.html
