[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tass-protocol"
version = "0.1.0"
description = "Tokeniser-Aware Structured Shorthand — reduce LLM inference costs 75-85% with a stenography-inspired output format"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Suyash Sharma" }]
keywords = ["llm", "tokens", "inference", "cost", "extraction", "shorthand", "tass"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
benchmark = ["tiktoken>=0.7"]
dev = ["tiktoken>=0.7", "pytest>=8", "build"]

[project.scripts]
tass = "tass.cli:main"

[project.urls]
Homepage = "https://github.com/suyash333/TASS-protocol"
"White Paper" = "https://doi.org/10.5281/zenodo.20403219"
"Bug Tracker" = "https://github.com/suyash333/TASS-protocol/issues"

[tool.setuptools.packages.find]
include = ["tass*"]

[tool.setuptools.package-data]
tass = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
